# Moz-Activate

Participant Names/: Jayesh.txt  ahsika.txt  deepthi.txt  harsh.txt  jyothi.txt  kalyan.txt  mv  pavan.txt  satya.txt  satya1.txt  shankar.txt  sowmya  sriakhilasri.txt  ssjblue.txt  ujwal.txt
Participant Names/ice/: Untitled Document~  index.html  index.html~
Participant Names/raj/: 1.html~  jyothi.js  manifest.json~
Participant Names/sampleaddon/: borderify.js  clg.html  clg.rar  manifest.json  popup.js  popup1.js
Participant Names/scenary/: index.html  index.html~
Participant Names/vr/: index.html
Participant Names/waterfall/beach/: index.html
Projects/IRC/: .gitignore
Projects/IRC/client/: Cargo.toml  Dockerfile
Projects/IRC/client/src/: main.rs
Projects/Undergrad pgms/algorithms_data_structures/number_theory/: prime_or_not.rs.txt  pyramid_triangle.rs
RUST/: RUST.pptx
RUST/Projects/IRC/: Dockerfile
RUST/Projects/IRC/client/: Rocket.toml  conf.ini
RUST/Projects/IRC/server/: Cargo.toml  Dockerfile
RUST/Projects/IRC/server/src/: main.rs
RUST/Projects/rustBlock/: Cargo.toml  README.md
RUST/Projects/rustBlock/src/: main.rs
RUST/Projects/rustBlock/src/blockchain/: block.rs  chain.rs  mod.rs  transaction.rs
Web Technologies Basics/: javascript.pptx
WebVR/Gram-Bangla/: index.html
WebVR/Makes/: 1cube.html  2lighted-cube.html  3cylinder.html  6movement.html  9hackerspace.html
WebVR/Makes/Scene 2/: index copy.html  index.html
WebVR/Makes/Scene 3/: index.html
WebVR/Makes/VR Scenery/: index.html
WebVR/myvrscene/: index.html
(+8 files in other folders)
